[package]
name = "bevy_transform_gizmo"
version = "0.1.0"
authors = [
    "Aevyrie Roessler <aevyrie@gmail.com>",
    "Foresight Mining Software Corporation",
]
edition = "2021"
description = "A 3D transform gizmo for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy_transform_gizmo"
documentation = "https://docs.rs/bevy_transform_gizmo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0-dev", default-features = false, features = [ "render" ] }
bevy_mod_picking = { version = "0.6" }
bevy_mod_raycast = { version = "0.4" }

[dependencies.naga]
features = ["wgsl-in", "spv-out", "wgsl-out"]
version = "0.8"

[dev-dependencies]
bevy = { version = "0.8.0-dev", default-features = false, features = [
    "bevy_winit",
    "x11",
] }

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_mod_raycast = { git = "https://github.com/teh-cmc/bevy_mod_raycast", branch = "main" }
bevy_mod_picking = { git = "https://github.com/teh-cmc/bevy_mod_picking", branch = "main" }
